# task-backend

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  Makefile.ci  README.md  TESTING.md  alembic.ini  conftest.py  dev-requirements.txt  docker-compose.yml  init.sql  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  reset-db.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a740423f5794_create_tasks_table.py  b6433149cc90_recreate_tables.py
app/: config.py  database.py  main.py
app/api/: __init__.py  health.py
app/api/v1/: __init__.py  auth.py  tasks.py
app/api/v2/: __init__.py  auth.py  tasks.py
app/models/: __init__.py  base.py  task.py  user.py
app/schemas/: __init__.py  auth.py  task.py
app/tests/: test_auth.py  test_health.py  test_imports.py  test_tasks.py
app/utils/: __init__.py  auth.py  logging.py  rate_limiting.py  validators.py
